# batteryland

./: README.md  app.vala  changelog  configure  meson.build
po/: POTFILES  batteryland.pot  en-GB.po  it.lichtzeit.batteryland.pot  it.po  meson.build
src/: about_window.vala  app.vala  indicator.vala  meson.build  upower.vala  utils.vala.in  version.vala.in
